# machine_learning_fuw

./: Cargo.toml  Dockerfile
models/: quadratic_eq_model  quadratic_eq_model_acc_50.sft  wave_reconstruction_model
src/: data_streams.rs  emnist.rs  emnist_loader.rs  lib.rs  log_reg.rs  main.rs  plots.rs  reg_lin.rs  stop_words.txt  xor_test.rs
