[package]
name = "uczenie_maszynowe_fuw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "log_reg"

[[bin]]
name = "reg_lin"

[[bin]]
name = "xor_test"

[[bin]]
name = "plotting"

[[bin]]
name = "quadratic_eq"

[[bin]]
name = "tensors"

[[bin]]
name = "equal_distance_model"

[dependencies]
dfdx = { git = "https://github.com/coreylowman/dfdx.git", features = ["numpy", "safetensors"], rev = "4722a99" }
plotters = { version = "0.3.5", default_features = false, features = ["svg_backend", "bitmap_backend", "errorbar", "line_series", "histogram", "point_series"] }
rand = "0.8.5"
ndarray = { version = "0.15.6", features = ["blas"] }
nalgebra = "0.32.3"
csv = "1.3.0"
serde = { version ="1.0.196", features = ["serde_derive"] }
rand_distr = "0.4.3"
polars = "0.38.3"
polars-ops = "0.38.3"
itertools = "0.12.1"
