[package]
name = "uczenie_maszynowe_fuw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "log_reg"

[[bin]]
name = "reg_lin"

[[bin]]
name = "xor_test"

[[bin]]
name = "plotting"

[[bin]]
name = "quadratic_eq"

[[bin]]
name = "tensors"

[[bin]]
name = "equal_distance_model"

[[bin]]
name = "emnist_characters_train"

[[bin]]
name = "encoder_decoder"

[[bin]]
name = "word2vec"

[[bin]]
name = "wave_reconstruction"

[dependencies]
dfdx = { git = "https://github.com/coreylowman/dfdx.git", features = ["numpy", "safetensors", "f16"], rev = "4722a99" }
plotters = { version = "0.3.5", default_features = false, features = ["svg_backend", "bitmap_backend", "errorbar", "line_series", "histogram", "point_series", "full_palette"] }
rand = "0.8.5"
ndarray = { version = "0.15.6" }
nalgebra = "0.32.3"
csv = "1.3.0"
serde = { version ="1.0.196", features = ["serde_derive"] }
rand_distr = "0.4.3"
itertools = "0.12.1"
byteorder = "1.5.0"
flate2 = "1.0.29"
num = "0.4.2"
npyz = "0.8.3"
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
tokenizers = "0.19.1"
linfa-reduction = "0.7.0"
linfa = "0.7.0"
candle-core = "0.5.1"
candle-nn = "0.5.1"

[features]
cuda = ["dfdx/cuda"]
